입소 및 봉심 안내_수정

--- a/01.html
+++ b/01.html
@@ -271,7 +271,7 @@
                     { time: "20:00 이전", title: "본부 도착 및 국궁", desc: "도착 즉시 <strong>대강전 앞마당</strong>에서 국궁(인사)을 드리고, 정급실에서 숙소를 배정받습니다." },
                     { time: "20:10", title: "환복", desc: "숙소에 짐을 풀고 정갈한 한복으로 갈아입습니다." },
                     { time: "20:30", title: "공지사항 청취", desc: "사무실에서 전달하는 중요 공지사항을 듣습니다." },
-                    { time: "21:20 전", title: "혈압 체크", desc: "점호 전까지 <strong class='text-k-red'>'청학관'</strong>에서 반드시 혈압을 측정하고 완료합니다." }
+                    { time: "21:20 전", title: "혈압 체크", desc: "점호 전까지 <strong class='text-k-red'>'청학관'</strong>에서 반드시 혈압을 측정하고 기재를 완료합니다." }
                 ]
             },
             {
@@ -280,7 +280,7 @@
                 description: "인원 점검을 마치고, 입소 의식인 '드는 봉심'을 위해 경건하게 준비하는 단계입니다.",
                 steps: [
                     { time: "21:20 까지", title: "대기 완료", desc: "늦어도 21:20까지는 대강전 1층에 도착하여 대기합니다. <strong>점호시 다다미 2칸에 3명 시립합니다.</strong><br><br><strong>• 회원은 직급과 입도 순서에 맞게 줄을 섭니다.<br>• 외수와 내수는 공부 시간에 맞게 줄을 섭니다.</strong>" },
-                    { time: "21:30", title: "점호 시작", desc: "대강전 1층에서 전체 점호를 실시합니다.<br><br><span class='text-k-red font-bold'>주의: 시학원께서 호명하실 때는 고개를 숙이거나 허리를 굽히지 않고, 바른 자세 그대로 간결하게 '네'하고 답합니다.</span>" }
+                    { time: "21:30", title: "점호 시작", desc: "대강전 1층에서 전체 점호를 실시합니다. <strong>점호 시에는 다다미 2칸에 3명씩 섭니다.</strong><br><br><span class='text-k-red font-bold'>주의: 시학원께서 호명하실 때는 고개를 숙이거나 허리를 굽히지 않고, 바른 자세 그대로 간결하게 '네'하고 답합니다.</span>" }
                 ]
             },
             {
