랜딩 페이지0121

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
                 </svg>
             </div>
             
-            <h1 class="font-serif text-3xl md:text-4xl lg:text-5xl font-bold mb-4 tracking-tight leading-normal text-k-text">
-                태극도 초심자 길라잡이
+            <h1 class="font-serif text-3xl md:text-4xl lg:text-5xl font-bold mb-4 tracking-tight leading-normal text-k-text break-keep">
+                태극도 공부 길라잡이
             </h1>
             <p class="font-sans text-stone-600 text-sm md:text-base font-light tracking-wide break-keep">
-                도를 구하는 마음으로 첫걸음을 내디딘 분들을 환영합니다.<br class="hidden md:block"/>
+                도를 구하는 마음으로 공부에 첫걸음을 내디딘 분들을 환영합니다.<br class="hidden md:block"/>
                 올바른 예법과 마음가짐을 위한 안내서입니다.
             </p>
             
