랜딩페이지0122

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 </div>
             </a>
 
-            <!-- 04. 법식 안내 -->
+            <!-- 04. 법식 안내 (아이콘 변경: 체크 -> 책) -->
             <a href="04.html" class="group block relative p-8 bg-white/40 border border-stone-200 hover:border-k-red/50 hover:bg-white/80 transition-all duration-300 rounded-lg hover:shadow-md">
                 <div class="flex items-start justify-between">
                     <div>
@@ -190,8 +190,8 @@
                     <!-- 아이콘 -->
                     <div class="text-stone-300 group-hover:text-k-red/70 transition-colors duration-300">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"></path>
-                            <path d="m9 12 2 2 4-4"></path>
+                            <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+                            <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
                         </svg>
                     </div>
                 </div>
@@ -199,10 +199,10 @@
 
         </nav>
 
-        <!-- 푸터 -->
+        <!-- 푸터 (문구 수정) -->
         <footer class="mt-16 text-center border-t border-stone-200 pt-8">
             <p class="font-sans text-stone-400 text-xs font-light tracking-wide">
-                &copy; 태극도 초심자 교육위원회. All rights reserved.
+                &copy; 태극도 본부. All rights reserved.
             </p>
         </footer>
 
