입소 및 준비과정 안내_법식 수정

--- a/01.html
+++ b/01.html
@@ -237,7 +237,7 @@
                         <span class="text-k-red font-serif text-lg font-bold">03</span>
                         <div>
                             <strong class="block text-ink font-medium mb-1">국궁(鞠躬)</strong>
-                            <span class="text-stone-600 text-base">국궁 자세를 다음 구령이 있을 때까지, 끝까지 유지합니다.</span>
+                            <span class="text-stone-600 text-base">허리를 굽혀 몸을 숙입니다. 국궁 자세를 다음 구령이 있을 때까지, 끝까지 유지합니다.</span>
                         </div>
                     </li>
                     <li class="flex items-start gap-4 p-4 bg-white/60 rounded-sm border border-stone-100 hover:border-stone-300 transition-colors">
