법식 안내_ui 수정 최종

--- a/04.html
+++ b/04.html
@@ -114,12 +114,12 @@
         <!-- 상단 컨트롤 (홈 버튼 & 알림 버튼) -->
         <div class="absolute top-6 right-6 sm:top-8 sm:right-8 z-20 flex items-center gap-3">
             <!-- 알림 권한 요청 버튼 -->
-            <button id="noti-btn" onclick="window.requestNotificationPermission()" class="flex items-center gap-1 text-stone-500 hover:text-bean transition-colors" title="새 글 알림 받기">
+            <button id="noti-btn" onclick="window.requestNotificationPermission()" class="flex items-center justify-center w-10 h-10 bg-white border-2 border-stone-200 rounded-full shadow-card text-stone-500 hover:text-bean hover:border-bean transition-all" title="새 글 알림 받기">
                 <i data-lucide="bell" class="w-5 h-5"></i>
             </button>
             <!-- 홈 버튼 -->
-            <a href="index.html" class="flex items-center gap-2 text-stone-600 hover:text-ink transition-colors duration-300 group">
-                <i data-lucide="home" class="w-6 h-6"></i>
+            <a href="index.html" class="flex items-center gap-2 px-4 py-2 bg-white border-2 border-stone-200 rounded-full shadow-card text-stone-600 hover:text-ink hover:border-bean transition-all duration-300 group">
+                <i data-lucide="home" class="w-5 h-5"></i>
                 <span class="hidden sm:inline font-serif text-base font-bold pt-0.5 group-hover:underline decoration-bean underline-offset-4 decoration-2">홈으로</span>
             </a>
         </div>
