입소_찐최종

--- a/01.html
+++ b/01.html
@@ -339,9 +339,9 @@
                                             </div>
                                         </div>
                                         <div class="flex items-center gap-3 p-3 bg-stone-50 rounded-lg">
-                                            <span class="font-bold text-stone-500 w-16">👣 ↑</span>
+                                            <span class="font-bold text-stone-500 w-16">← 👣</span>
                                             <div class="flex-1">
-                                                <div class="text-xs text-stone-500 font-bold">갱진 1보 (왼쪽 1걸음)</div>
+                                                <div class="text-xs text-blue-600 font-bold">갱진 1보 (왼쪽 1걸음)</div>
                                                 <div class="font-bold text-k-text">평배 2배</div>
                                             </div>
                                         </div>
