--- a/04.html
+++ b/04.html
@@ -224,13 +224,13 @@
                     <label class="block text-sm font-bold text-stone-600 mb-2 flex items-center gap-2">
                         <i data-lucide="image" class="w-4 h-4"></i> 사진/영상 첨부
                     </label>
-                    <!-- multiple 속성 추가 -->
+                    <!-- multiple 속성 재확인 및 적용 -->
                     <input type="file" id="input-file" accept="image/*,video/*" multiple class="w-full bg-white border-2 border-stone-300 rounded-lg p-2 text-sm focus:outline-none focus:border-theme-color file:mr-4 file:py-2 file:px-4 file:rounded-md file:border-0 file:text-sm file:font-bold file:bg-stone-200 file:text-stone-700 hover:file:bg-stone-300 cursor-pointer">
                     <div id="file-preview-info" class="mt-3 text-sm text-theme-color font-bold hidden flex items-center gap-2">
                         <i class="fa-solid fa-check-circle"></i><span id="file-name-display"></span>
                     </div>
                     <div class="mt-3 text-xs text-stone-500 space-y-1">
-                        <p class="flex items-center gap-1"><i class="fa-solid fa-layer-group text-stone-400"></i> <span class="font-bold">다중 선택:</span> 여러 장의 사진을 선택하여 올릴 수 있습니다.</p>
+                        <p class="flex items-center gap-1"><i class="fa-solid fa-layer-group text-stone-400"></i> <span class="font-bold">다중 선택:</span> PC에서는 Ctrl 또는 Shift 키를 누르고 선택하세요.</p>
                         <p class="flex items-center gap-1"><i class="fa-solid fa-camera text-stone-400"></i> <span class="font-bold">사진:</span> 고화질 사진은 자동으로 최적화되어 업로드됩니다.</p>
                         <p class="flex items-center gap-1"><i class="fa-solid fa-video text-stone-400"></i> <span class="font-bold">동영상:</span> 700KB 이하만 가능합니다. (큰 영상은 아래 URL 이용)</p>
                     </div>
@@ -934,6 +934,26 @@
             renderContents();
         }
 
+        // --- File Input Change Listener (New) ---
+        fileInput.addEventListener('change', () => {
+            const count = fileInput.files.length;
+            const previewInfo = document.getElementById('file-preview-info');
+            const nameDisplay = document.getElementById('file-name-display');
+            
+            if (count > 0) {
+                previewInfo.classList.remove('hidden');
+                nameDisplay.innerText = `${count}개의 파일이 선택되었습니다.`;
+            } else {
+                // If user cancels or clears, behave based on editing state
+                if (!window.editingId) {
+                    previewInfo.classList.add('hidden');
+                }
+                // In edit mode, we might want to revert text to "existing files", 
+                // but standard file input behavior is clearing on cancel.
+                // We'll let the user re-select or cancel edit to reset.
+            }
+        });
+
         // --- Submit Logic (Multi-file support) ---
         postFormEl.addEventListener('submit', async (e) => {
             e.preventDefault();
@@ -941,7 +961,8 @@
             const category = document.getElementById('input-category').value;
             const title = document.getElementById('input-title').value;
             const desc = document.getElementById('input-desc').value;
-            const files = fileInput.files;
+            // Use Array.from for safety
+            const files = Array.from(fileInput.files);
             const urlInput = imageUrlInput.value.trim();
             
             if (!title || !desc) {
@@ -968,7 +989,6 @@
                         processedImages.push(dataUrl);
                     }
                     // Safety check for Firestore document size limit (approx 1MB total)
-                    // Base64 string length roughly equals byte size. 900KB safety margin.
                     if (totalSize > 900000) {
                         throw new Error(`총 파일 용량이 너무 큽니다. (${Math.round(totalSize/1024)}KB). 사진 개수를 줄이거나 더 작은 이미지를 사용해주세요.`);
                     }
@@ -991,7 +1011,6 @@
                         finalImages = [urlInput]; // If only URL is provided
                     } else if (window.editingId) {
                         // Keep existing if no new file/url provided
-                        // Fetch current post to get existing images
                         const currentPost = localContents.find(p => String(p.id) === String(window.editingId));
                         if(currentPost) {
                             finalImages = currentPost.images || (currentPost.image ? [currentPost.image] : []);
