법식_게시글 등록

--- a/04.html
+++ b/04.html
@@ -873,7 +873,7 @@
             }
             
             fileInput.value = '';
-            submitBtnText.innerText = '게시글 수정하기';
+            submitBtnText.innerText = '게시글 등록하기';
             adminPanelEl.scrollIntoView({ behavior: 'smooth' });
         };
 
