--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- 휴대전화 홈 화면 바로가기(PWA) 및 아이콘 설정 -->
     <!-- 1. 안드로이드/크롬/네이버용 아이콘 (가장 권장되는 크기 192x192) -->
-    <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
     <!-- 2. 아이폰/아이패드용 아이콘 (180x180) -->
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- 3. 브라우저 주소창 색상 (태극도의 청색 계열로 설정) -->
