입소_드는 봉심 구령 수정

--- a/01.html
+++ b/01.html
@@ -301,7 +301,7 @@
                                         <span class="block text-sm text-stone-400 mb-1">시학원 구령</span>
                                         <span class="font-serif font-bold text-lg text-theme-color">"국궁 ~ 1열 앞으로 나솨"</span>
                                     </div>
-                                    <p class="text-stone-700 mb-2"><strong>행동:</strong> 전원 국궁 자세 취함 → 회원 줄부터 대동문 통과 → 영대 진입</p>
+                                    <p class="text-stone-700 mb-2"><strong>행동:</strong> 전원 국궁 자세 취함 → 1열 앞으로 나솨: 회원, 2열 앞으로 나솨: 외수, 3열 앞으로 나솨: 내수 줄이 대동문 통과 → 영대 진입</p>
                                     <p class="text-stone-600 bg-theme-soft/50 p-2 rounded text-sm">📍 <strong>위치:</strong> 영대 앞 다다미 1장에 2명씩 정렬</p>
                                 </div>
                             </div>
