일과표->공부자가이드

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
             </a>
 
-            <!-- 3. 일과표 -->
+            <!-- 3. 공부자 가이드 -->
             <a href="02.html" class="group relative flex flex-col bg-white rounded-xl border-2 border-stone-100 hover:border-theme-teal transition-all duration-300 shadow-card hover:shadow-card-hover transform hover:-translate-y-1 overflow-hidden">
                 <div class="h-1.5 w-full bg-theme-teal opacity-80 group-hover:opacity-100 transition-opacity"></div>
                 <div class="p-6 md:p-8 flex items-start gap-5">
@@ -165,7 +165,7 @@
                             <h2 class="font-serif text-2xl font-bold text-k-text group-hover:text-theme-teal transition-colors">일과표</h2>
                         </div>
                         <p class="text-stone-600 text-sm md:text-base leading-relaxed keep-all group-hover:text-stone-800">
-                            수도인으로서 하루의 시작과 끝, 지켜야 할 <strong class="text-theme-teal font-bold">기도 시간</strong>과 <strong class="text-theme-teal font-bold">하루 일과</strong>를 확인합니다.
+                            수도인으로서 하루의 시작과 끝, 지켜야 할 <strong class="text-theme-teal font-bold">하루 일과</strong>와 <strong class="text-theme-teal font-bold">공부 방법</strong>을 확인합니다.
                         </p>
                     </div>
                 </div>
