--- a/02.html
+++ b/02.html
@@ -112,12 +112,23 @@
             color: #78716c;
             font-weight: 500;
             transition: all 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 0.5rem;
+        }
+        .nav-btn:hover {
+            color: #0f766e;
+            background-color: rgba(240, 253, 250, 0.3);
         }
         .nav-active {
             color: #0f766e;
             border-bottom: 3px solid #0f766e;
             font-weight: 700;
             background-color: rgba(240, 253, 250, 0.5); /* subtle teal bg */
+        }
+        .nav-active svg {
+            stroke-width: 2.5px;
         }
 
         /* Current Item Highlight */
@@ -148,9 +159,9 @@
             <div class="flex justify-between items-start">
                 <div class="flex flex-col gap-2">
                     <div class="flex items-center gap-3">
-                        <!-- SVG Icon: Sun/Time -->
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-theme" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
+                        <!-- Modern Guide Icon -->
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-theme" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
                         </svg>
                         <h1 class="text-3xl font-serif font-bold text-k-text tracking-tight">공부자 가이드</h1>
                     </div>
@@ -172,9 +183,30 @@
         <!-- Navigation -->
         <nav class="bg-k-bg/95 border-b border-stone-200 sticky top-[97px] z-40">
             <div class="flex no-scrollbar overflow-x-auto">
-                <button onclick="switchTab('schedule')" id="nav-schedule" class="flex-1 py-4 px-6 text-center nav-btn nav-active whitespace-nowrap text-lg">일과표</button>
-                <button onclick="switchTab('practice')" id="nav-practice" class="flex-1 py-4 px-6 text-center nav-btn whitespace-nowrap text-lg">공부 및 역할</button>
-                <button onclick="switchTab('simulator')" id="nav-simulator" class="flex-1 py-4 px-6 text-center nav-btn whitespace-nowrap text-lg">시뮬레이터</button>
+                <button onclick="switchTab('schedule')" id="nav-schedule" class="flex-1 py-4 px-6 text-center nav-btn nav-active whitespace-nowrap text-lg">
+                    <!-- Calendar Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
+                        <line x1="16" y1="2" x2="16" y2="6" />
+                        <line x1="8" y1="2" x2="8" y2="6" />
+                        <line x1="3" y1="10" x2="21" y2="10" />
+                    </svg>
+                    <span>일과표</span>
+                </button>
+                <button onclick="switchTab('practice')" id="nav-practice" class="flex-1 py-4 px-6 text-center nav-btn whitespace-nowrap text-lg">
+                    <!-- Book Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
+                    </svg>
+                    <span>공부 및 역할</span>
+                </button>
+                <button onclick="switchTab('simulator')" id="nav-simulator" class="flex-1 py-4 px-6 text-center nav-btn whitespace-nowrap text-lg">
+                    <!-- Cube/Simulation Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4" />
+                    </svg>
+                    <span>시뮬레이터</span>
+                </button>
             </div>
         </nav>
 
@@ -213,6 +245,15 @@
                 <div class="relative timeline-line pl-2" id="timeline-container">
                     <!-- Javascript will populate this -->
                 </div>
+
+                <!-- Next Step Button (Added) -->
+                <button onclick="switchTab('practice')" class="w-full bg-white border-2 border-theme text-theme hover:bg-theme hover:text-white py-5 rounded-xl text-xl font-bold shadow-md transition-all flex items-center justify-center gap-2 group mt-10">
+                    <span>다음 단계: 나의 공부 및 역할 확인하기</span>
+                    <!-- Arrow Right Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 transform group-hover:translate-x-1 transition-transform" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6" />
+                    </svg>
+                </button>
             </section>
 
             <!-- SECTION 2: PRACTICE & ROLES -->
@@ -346,6 +387,15 @@
                         </div>
                     </section>
                 </div>
+
+                <!-- Next Step Button (Added) -->
+                <button onclick="switchTab('simulator')" class="w-full bg-white border-2 border-theme text-theme hover:bg-theme hover:text-white py-5 rounded-xl text-xl font-bold shadow-md transition-all flex items-center justify-center gap-2 group mt-12">
+                    <span>다음 단계: 입실 시뮬레이터 체험하기</span>
+                    <!-- Arrow Right Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 transform group-hover:translate-x-1 transition-transform" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6" />
+                    </svg>
+                </button>
             </section>
 
             <!-- SECTION 3: SIMULATOR -->
@@ -365,7 +415,7 @@
                             <ul class="list-disc pl-5 space-y-3">
                                 <li><strong class="text-theme bg-white px-2 py-0.5 rounded border border-stone-200 shadow-sm">과한 인사 지양</strong> 입실 후에는 너무 과한 인사를 하지 않습니다. 좌배(坐拜)로 시작해서 좌배로 끝날 수 있도록 과한 부복(엎드려 절함)은 하지 않습니다.</li>
                                 <li><strong class="text-theme bg-white px-2 py-0.5 rounded border border-stone-200 shadow-sm">회원에게 속도 맞춤</strong> 옆의 회원이 자리에 앉으면 청소를 멈추고 정돈합니다. 모든 행동의 속도는 회원에게 맞춰야 합니다.</li>
-                                <li><strong class="text-theme bg-white px-2 py-0.5 rounded border border-stone-200 shadow-sm">교대 시 거리 확보</strong> 회원과 내수가 뒤로 물러날 때, 다음 공부자가 지나갈 수 있는 거리를 확보하고 물러나야 합니다. 너무 뒤로 물러나면 벽과의 공간이 없어 통행이 어렵습니다.</li>
+                                <li><strong class="text-theme bg-white px-2 py-0.5 rounded border border-stone-200 shadow-sm">교대 시 거리 확보</strong> 회원과 내수가 엉덩이를 뒤로 물릴 때, 다음 공부자가 지나갈 수 있는 거리를 확보하고 물러나야 합니다. 너무 뒤로 물러나면 벽과의 공간이 없어 통행이 어렵습니다.</li>
                             </ul>
                         </div>
                     </div>
