--- a/02.html
+++ b/02.html
@@ -152,7 +152,7 @@
 <body class="bg-k-bg bg-hanji-pattern bg-[length:24px_24px] min-h-screen flex flex-col items-center">
 
     <!-- Central Container (Modified to have Hanji background) -->
-    <div class="w-full max-w-4xl bg-k-bg bg-hanji-pattern bg-[length:24px_24px] min-h-screen shadow-paper border-x border-stone-100 flex flex-col">
+    <div class="w-full max-w-4xl bg-k-bg bg-hanji-pattern bg-[length:24px_24px] min-h-screen shadow-paper border-x border-stone-100 flex flex-col relative">
         
         <!-- Header -->
         <header class="sticky top-0 z-50 bg-k-bg/95 backdrop-blur-sm border-b border-stone-200 px-6 py-5">
@@ -241,12 +241,21 @@
                     </div>
                 </div>
 
+                <!-- Next Step Button (Top) -->
+                <button onclick="switchTab('practice')" class="w-full bg-white border-2 border-theme text-theme hover:bg-theme hover:text-white py-4 rounded-xl text-lg font-bold shadow-md transition-all flex items-center justify-center gap-2 group">
+                    <span>다음 단계: 나의 공부 및 역할 확인하기</span>
+                    <!-- Arrow Right Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transform group-hover:translate-x-1 transition-transform" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6" />
+                    </svg>
+                </button>
+
                 <!-- Timeline -->
                 <div class="relative timeline-line pl-2" id="timeline-container">
                     <!-- Javascript will populate this -->
                 </div>
 
-                <!-- Next Step Button (Added) -->
+                <!-- Next Step Button (Bottom) -->
                 <button onclick="switchTab('practice')" class="w-full bg-white border-2 border-theme text-theme hover:bg-theme hover:text-white py-5 rounded-xl text-xl font-bold shadow-md transition-all flex items-center justify-center gap-2 group mt-10">
                     <span>다음 단계: 나의 공부 및 역할 확인하기</span>
                     <!-- Arrow Right Icon -->
@@ -269,6 +278,15 @@
                         <strong class="text-theme">모든 행동은 회원을 중심으로 맞추는 것이 중요합니다.</strong>
                     </p>
                 </div>
+
+                <!-- Next Step Button (Top) -->
+                <button onclick="switchTab('simulator')" class="w-full bg-white border-2 border-theme text-theme hover:bg-theme hover:text-white py-4 rounded-xl text-lg font-bold shadow-md transition-all flex items-center justify-center gap-2 group">
+                    <span>다음 단계: 입실 시뮬레이터 체험하기</span>
+                    <!-- Arrow Right Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transform group-hover:translate-x-1 transition-transform" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6" />
+                    </svg>
+                </button>
 
                 <!-- Inputs Wrapper -->
                 <div class="white-box p-8 md:p-10 flex flex-col items-center gap-8">
@@ -388,7 +406,7 @@
                     </section>
                 </div>
 
-                <!-- Next Step Button (Added) -->
+                <!-- Next Step Button (Bottom) -->
                 <button onclick="switchTab('simulator')" class="w-full bg-white border-2 border-theme text-theme hover:bg-theme hover:text-white py-5 rounded-xl text-xl font-bold shadow-md transition-all flex items-center justify-center gap-2 group mt-12">
                     <span>다음 단계: 입실 시뮬레이터 체험하기</span>
                     <!-- Arrow Right Icon -->
@@ -447,6 +465,20 @@
             </section>
 
         </main>
+        
+        <!-- Floating Scroll Buttons -->
+        <div class="fixed bottom-8 right-8 z-50 flex flex-col gap-3">
+            <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="p-3 bg-white border-2 border-stone-200 rounded-full shadow-lg text-theme hover:bg-theme hover:text-white hover:border-theme transition-all" aria-label="맨 위로">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M5 15l7-7 7 7" />
+                </svg>
+            </button>
+            <button onclick="window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'})" class="p-3 bg-white border-2 border-stone-200 rounded-full shadow-lg text-theme hover:bg-theme hover:text-white hover:border-theme transition-all" aria-label="맨 아래로">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+                </svg>
+            </button>
+        </div>
     </div>
 
     <!-- Script Logic -->
@@ -518,6 +550,8 @@
             { time: "21:30", title: "점호", loc: "대강전 1층", note: "21:20까지 도착", role: "all" },
             { time: "22:30", title: "드는 봉심", loc: "대강전 2층", note: "22:20까지 승정문 앞 대기", role: "all" },
             { time: "23:30", title: "퇴배 봉심", loc: "대강전 2층", note: "23:20까지 승정문 앞 대기", role: "all" },
+            { time: "23:50", title: "퇴배 종료", loc: "대강전 1층", note: "인사 후 귀가", role: "all" },
+            { time: "24:00", title: "취침", loc: "숙소", note: "", role: "all" },
         ];
 
         let currentTab = 'schedule';
