--- a/03.html
+++ b/03.html
@@ -752,5 +752,21 @@ ${post.content}
         // 앱 시작
         app.init();
     </script>
+
+    <!-- 플로팅 버튼 (최상단/최하단 이동) -->
+    <div class="fixed bottom-8 right-8 z-50 flex flex-col gap-3 animate-fade-in">
+        <!-- Top Scroll -->
+        <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="p-3 bg-white border-2 border-theme-color/30 rounded-full shadow-custom text-theme-color hover:bg-theme-color hover:text-white hover:border-theme-color transition-all duration-300 group transform hover:-translate-y-1" aria-label="맨 위로">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M5 15l7-7 7 7" />
+            </svg>
+        </button>
+        <!-- Bottom Scroll -->
+        <button onclick="window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'})" class="p-3 bg-white border-2 border-theme-color/30 rounded-full shadow-custom text-theme-color hover:bg-theme-color hover:text-white hover:border-theme-color transition-all duration-300 group transform hover:-translate-y-1" aria-label="맨 아래로">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+            </svg>
+        </button>
+    </div>
 </body>
 </html>
