--- a/01.html
+++ b/01.html
@@ -143,7 +143,7 @@
         }
     </style>
 </head>
-<body class="font-sans text-k-text antialiased text-lg bg-k-bg bg-hanji-pattern">
+<body class="font-sans text-k-text antialiased text-lg bg-k-bg bg-hanji-pattern relative">
 
     <!-- 헤더 -->
     <header class="sticky top-0 z-50 w-full bg-white/95 border-b border-stone-200 shadow-sm h-20" id="main-header">
@@ -182,9 +182,14 @@
                     아래 단계(Step)를 순서대로 눌러 확인해 주세요.
                 </p>
 
-                <!-- 준비물 (요약) -->
-                <div class="bg-theme-soft/50 p-4 rounded-lg border border-theme-color/10 flex items-start gap-3">
-                    <span class="text-2xl flex-shrink-0">🎒</span>
+                <!-- 준비물 (요약) - 아이콘 교체됨 -->
+                <div class="bg-theme-soft/50 p-4 rounded-lg border border-theme-color/10 flex items-start gap-4">
+                    <span class="flex-shrink-0 w-12 h-12 flex items-center justify-center bg-white rounded-full text-theme-color border border-theme-color/20 shadow-sm">
+                        <!-- 심플하고 모던한 선 스타일 아이콘 (가방) -->
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+                        </svg>
+                    </span>
                     <div>
                         <strong class="block text-theme-color font-bold text-lg mb-1">필수 준비물 챙기셨나요?</strong>
                         <p class="text-stone-700 text-base">한복, 세면도구, 흰신발, 개인 컵, 상비약</p>
@@ -203,6 +208,22 @@
     <!-- 공통 푸터 -->
     <div class="text-center py-8 text-stone-400 text-sm font-medium">
         &copy; Gongbu Guide. All rights reserved.
+    </div>
+
+    <!-- 플로팅 버튼 (우측 하단 고정) -->
+    <div class="fixed bottom-8 right-8 z-50 flex flex-col gap-3">
+        <!-- Top Scroll -->
+        <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="p-3 bg-white border-2 border-stone-200 rounded-full shadow-lg text-theme-color hover:bg-theme-color hover:text-white hover:border-theme-color transition-all duration-300 group" aria-label="맨 위로">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M5 15l7-7 7 7" />
+            </svg>
+        </button>
+        <!-- Bottom Scroll -->
+        <button onclick="window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'})" class="p-3 bg-white border-2 border-stone-200 rounded-full shadow-lg text-theme-color hover:bg-theme-color hover:text-white hover:border-theme-color transition-all duration-300 group" aria-label="맨 아래로">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+            </svg>
+        </button>
     </div>
 
     <!-- JavaScript 로직 -->
@@ -301,7 +322,7 @@
                                         <span class="block text-sm text-stone-400 mb-1">시학원 구령</span>
                                         <span class="font-serif font-bold text-lg text-theme-color">"국궁 ~ 1열 앞으로 나솨"</span>
                                     </div>
-                                    <p class="text-stone-700 mb-2"><strong>행동:</strong> 전원 국궁 자세 취함 → 1열 앞으로 나솨: 회원, 2열 앞으로 나솨: 외수, 3열 앞으로 나솨: 내수 줄이 대동문 통과 → 영대 진입</p>
+                                    <p class="text-stone-700 mb-2"><strong>행동:</strong> 전원 국궁 자세 취함 → 회원 줄부터 대동문 통과 → 영대 진입</p>
                                     <p class="text-stone-600 bg-theme-soft/50 p-2 rounded text-sm">📍 <strong>위치:</strong> 영대 앞 다다미 1장에 2명씩 정렬</p>
                                 </div>
                             </div>
@@ -339,9 +360,9 @@
                                             </div>
                                         </div>
                                         <div class="flex items-center gap-3 p-3 bg-stone-50 rounded-lg">
-                                            <span class="font-bold text-stone-500 w-16">← 👣</span>
+                                            <span class="font-bold text-stone-500 w-16">👣 ↑</span>
                                             <div class="flex-1">
-                                                <div class="text-xs text-blue-600 font-bold">갱진 1보 (왼쪽 1걸음)</div>
+                                                <div class="text-xs text-stone-500 font-bold">갱진 1보 (왼쪽 1걸음)</div>
                                                 <div class="font-bold text-k-text">평배 2배</div>
                                             </div>
                                         </div>
