--- a/04.html
+++ b/04.html
@@ -259,12 +259,28 @@
         <p>&copy; 2024 태극도 법식 안내. All rights reserved.</p>
     </footer>
 
-    <!-- 관리자 모드 토글 스위치 -->
-    <div class="fixed bottom-8 right-6 z-50 flex items-center gap-3 bg-white pl-5 pr-2 py-2.5 rounded-full shadow-xl border-2 border-stone-200">
-        <span class="text-sm font-bold text-stone-700">관리자 모드</span>
-        <button id="admin-toggle" class="relative inline-flex h-8 w-14 items-center rounded-full transition-colors focus:outline-none bg-stone-300 hover:bg-stone-400">
+    <!-- 최상단/최하단 이동 플로팅 버튼 (우측 하단) -->
+    <div class="fixed bottom-8 right-8 z-40 flex flex-col gap-3">
+        <!-- Top Scroll -->
+        <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="p-3 bg-white border-2 border-stone-200 rounded-full shadow-card text-theme-color hover:bg-theme-color hover:text-white hover:border-theme-color transition-all duration-300 transform hover:-translate-y-1" aria-label="맨 위로">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M5 15l7-7 7 7" />
+            </svg>
+        </button>
+        <!-- Bottom Scroll -->
+        <button onclick="window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'})" class="p-3 bg-white border-2 border-stone-200 rounded-full shadow-card text-theme-color hover:bg-theme-color hover:text-white hover:border-theme-color transition-all duration-300 transform hover:-translate-y-1" aria-label="맨 아래로">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+            </svg>
+        </button>
+    </div>
+
+    <!-- 관리자 모드 토글 스위치 (좌측 하단으로 이동 및 축소) -->
+    <div class="fixed bottom-8 left-8 z-50 flex items-center gap-2 bg-white pl-4 pr-2 py-2 rounded-full shadow-lg border-2 border-stone-200 transform scale-90 origin-bottom-left opacity-80 hover:opacity-100 transition-all">
+        <span class="text-xs font-bold text-stone-500">관리자 모드</span>
+        <button id="admin-toggle" class="relative inline-flex h-6 w-10 items-center rounded-full transition-colors focus:outline-none bg-stone-300 hover:bg-stone-400">
             <span class="sr-only">관리자 모드 활성화</span>
-            <span id="toggle-circle" class="inline-block h-6 w-6 transform rounded-full bg-white transition-transform translate-x-1 shadow-sm"></span>
+            <span id="toggle-circle" class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-1 shadow-sm"></span>
         </button>
     </div>
 
