--- a/02.html
+++ b/02.html
@@ -160,28 +160,30 @@
                 <div class="flex flex-col gap-2">
                     <div class="flex items-center gap-3">
                         <!-- Modern Guide Icon -->
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-theme" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-theme flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
                         </svg>
-                        <h1 class="text-3xl font-serif font-bold text-k-text tracking-tight">공부자 가이드</h1>
+                        <h1 class="text-2xl md:text-3xl font-serif font-bold text-k-text tracking-tight break-keep">공부자 가이드</h1>
                     </div>
                     <!-- Divider -->
                     <div class="h-1 w-12 bg-theme rounded-full"></div>
                     <p class="text-sm text-sub font-medium mt-1">오늘의 마음가짐: 정성(精誠)</p>
                 </div>
 
-                <!-- Home Button -->
-                <a href="index.html" class="group flex items-center gap-2 px-4 py-2 bg-white border border-stone-200 rounded-lg hover:border-theme hover:text-theme transition-colors shadow-sm">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-sub group-hover:text-theme transition-colors" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <!-- Home Button (Responsive) -->
+                <!-- Mobile: Icon only, PC: Icon + Text -->
+                <a href="index.html" class="group flex items-center gap-2 px-3 py-2 md:px-4 bg-white border border-stone-200 rounded-lg hover:border-theme hover:text-theme transition-colors shadow-sm shrink-0">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-sub group-hover:text-theme transition-colors" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
                     </svg>
-                    <span class="text-sm font-bold text-sub group-hover:text-theme">홈으로</span>
+                    <!-- Hidden on mobile (hidden), shown on desktop (md:inline) -->
+                    <span class="hidden md:inline text-sm font-bold text-sub group-hover:text-theme whitespace-nowrap">홈으로</span>
                 </a>
             </div>
         </header>
 
         <!-- Navigation -->
-        <nav class="bg-k-bg/95 border-b border-stone-200 sticky top-[97px] z-40">
+        <nav class="bg-k-bg/95 border-b border-stone-200 sticky top-[105px] md:top-[97px] z-40">
             <div class="flex no-scrollbar overflow-x-auto">
                 <button onclick="switchTab('schedule')" id="nav-schedule" class="flex-1 py-4 px-6 text-center nav-btn nav-active whitespace-nowrap text-lg">
                     <!-- Calendar Icon -->
@@ -468,12 +470,14 @@
         
         <!-- Floating Scroll Buttons -->
         <div class="fixed bottom-8 right-8 z-50 flex flex-col gap-3">
-            <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="p-3 bg-white border-2 border-stone-200 rounded-full shadow-lg text-theme hover:bg-theme hover:text-white hover:border-theme transition-all" aria-label="맨 위로">
+            <!-- Top Scroll -->
+            <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="p-3 bg-white border-2 border-stone-200 rounded-full shadow-lg text-[#0f766e] hover:bg-[#0f766e] hover:text-white hover:border-[#0f766e] transition-all" aria-label="맨 위로">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 15l7-7 7 7" />
                 </svg>
             </button>
-            <button onclick="window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'})" class="p-3 bg-white border-2 border-stone-200 rounded-full shadow-lg text-theme hover:bg-theme hover:text-white hover:border-theme transition-all" aria-label="맨 아래로">
+            <!-- Bottom Scroll -->
+            <button onclick="window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'})" class="p-3 bg-white border-2 border-stone-200 rounded-full shadow-lg text-[#0f766e] hover:bg-[#0f766e] hover:text-white hover:border-[#0f766e] transition-all" aria-label="맨 아래로">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
                 </svg>
@@ -550,8 +554,6 @@
             { time: "21:30", title: "점호", loc: "대강전 1층", note: "21:20까지 도착", role: "all" },
             { time: "22:30", title: "드는 봉심", loc: "대강전 2층", note: "22:20까지 승정문 앞 대기", role: "all" },
             { time: "23:30", title: "퇴배 봉심", loc: "대강전 2층", note: "23:20까지 승정문 앞 대기", role: "all" },
-            { time: "23:50", title: "퇴배 종료", loc: "대강전 1층", note: "인사 후 귀가", role: "all" },
-            { time: "24:00", title: "취침", loc: "숙소", note: "", role: "all" },
         ];
 
         let currentTab = 'schedule';
